Pick colors now. Thats pretty neat

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -21,3 +21,19 @@ body {
   font-family: 'Noto Sans JP', sans-serif;
   overflow: hidden;
 }
+
+#root {
+  height: 100%;
+}
+
+.brightness {
+  color: white;
+
+  .left {
+
+  }
+
+  .right {
+
+  }
+}
