Starting image maniuplation stuff

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -13,11 +13,8 @@ body {
   min-width: 1024px;
   min-height: 768px;
 
-  background: linear-gradient(
-    200.96deg,
-    #252525 -29.09%,
-    #151010 51.77%
-  );
+  background: #2c2c2c;
+
   font-family: 'Noto Sans JP', sans-serif;
   overflow: hidden;
 }
