--- a/src/assets/scss/components/DeckButton.scss
+++ b/src/assets/scss/components/DeckButton.scss
@@ -12,16 +12,18 @@
 }
 
 .deckButtonContent {
+  cursor: pointer;
+
   position: absolute;
   outline: 0;
 
   width: 100%;
   height: 100%;
 
-  background: #252525;
+  background: #1d1d1d;
 
   border-radius: 6px;
-  border: 2px solid #111111;
+  border: 3px solid #161616;
 
   &:focus {
     outline: 0;
