--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -1,9 +1,6 @@
-/*
- * @NOTE: Prepend a `~` to css file paths that are in your node_modules
- *        See https://github.com/webpack-contrib/sass-loader#imports
- */
+//noinspection CssUnknownTarget
+@import "~boostrap/scss/bootstrap";
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
-@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css');
 
 @import './buttons.scss';
 
@@ -25,12 +22,4 @@ body {
 
 .brightness {
   color: white;
-
-  .left {
-
-  }
-
-  .right {
-
-  }
 }
