--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -1,5 +1,5 @@
 //noinspection CssUnknownTarget
-@import "~boostrap/scss/bootstrap";
+@import url("https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css");
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
 
 @import './buttons.scss';
