Refactoring a whole lot

--- a/src/assets/scss/components/PropertiesTray.scss
+++ b/src/assets/scss/components/PropertiesTray.scss
@@ -3,7 +3,9 @@
 .propertiesTray {
   padding-left: 12px;
   padding-right: 12px;
-  height: 100%;
+  padding-bottom: 24px;
+
+  margin-right: -12px;
   border-left: 1px solid black;
 
   color: white;
