--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -7,9 +7,6 @@
 body {
   height: 100vh;
 
-  min-width: 1024px;
-  min-height: 768px;
-
   background: #2c2c2c;
 
   font-family: 'Noto Sans JP', sans-serif;
@@ -17,7 +14,7 @@ body {
 }
 
 #root {
-  height: 100%;
+  height: 100vh;
 }
 
 .brightness {
